force-app/main/default/objects/ampi__Allocation__c/ampi__Allocation__c.object-meta.xml
<CustomObject>
    <description>Custom object to track monetary amounts allocated to a project by an account or organization.</description>
    <label>Allocation</label>
    <nameField>
        <displayFormat>ALL-{00000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>