force-app/main/default/objects/ampi__Allocation__c/fields/ampi__Account__c.field-meta.xml
<CustomField>
    <fullName>ampi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to track which account or organization is allocating money to a project</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>