force-app/main/default/objects/ampi__Allocation__c/fields/ampi__Amount__c.field-meta.xml
<CustomField>
    <fullName>ampi__Amount__c</fullName>
    <description>Currency field to track the amount that an account or organization has allocated to a project. The value of this field is added to field(s) on ampi__xx_Fund__c depending on ampi__xx_Status__c of the ampi__Allocation__c record.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>