force-app/main/default/objects/ampi__Allocation__c/fields/ampi__IATI_Aid_Type_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Aid_Type_Vocabulary__c</fullName>
    <description>A code for the vocabulary aid-type classifications. If omitted the Aid Type (OECD DAC) codelist is assumed. The code must be a valid value in the Aid Type Vocabulary codelist. The selected value will be printed into the iati-activities/iati-activity/transaction/aid-type/@vocabulary attribute in the IATI Activity XML.</description>
    <label>IATI Aid Type Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Aid_Type_Vocabulary</valueSetName>
    </valueSet>
</CustomField>