force-app/main/default/objects/ampi__Allocation__c/fields/ampi__IATI_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Description__c</fullName>
    <description>Text field to describe Allocation for IATI reporting. This text is printed into the transaction/description/narrative element in the IATI Activity XML.</description>
    <label>IATI Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>