force-app/main/default/objects/ampi__Allocation__c/fields/ampi__IATI_Disbursement_Channel__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Disbursement_Channel__c</fullName>
    <description>Picklist to select Disbursement Channels as based on IATI codelist (http://reference.iatistandard.org/203/codelists/DisbursementChannel/). The code list sits in the API Name/value of the picklist value, while the Label is the human-readable name of the Disbursement Channel. This code is printed into the transaction/disbursement-channel/@code attribute in the IATI Activity XML.</description>
    <label>IATI Disbursement Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Disbursement_Channel</valueSetName>
    </valueSet>
</CustomField>