force-app/main/default/objects/ampi__Allocation__c/fields/ampi__IATI_Finance_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Finance_Type_Category__c</fullName>
    <description>Picklist field for users to narrow down the picklist options in Finance Type for IATI Activity Reporting. The picklist values draw from http://reference.iatistandard.org/203/codelists/FinanceType-category/. The value selected is not printed into the IATI Activity XML.</description>
    <label>IATI Finance Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Finance_Type_Category</valueSetName>
    </valueSet>
</CustomField>