force-app/main/default/objects/ampi__Allocation__c/fields/ampi__IATI_Humanitarian__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to indicate whether transaction was partially or entirely humanitarian aid. If left unchecked, that means this transaction was not related to humanitarian aid. The boolean value of this is printed into the transaction/@humanitarian attribute in the IATI Activity XML.</description>
    <label>IATI Humanitarian</label>
    <type>Checkbox</type>
</CustomField>