force-app/main/default/objects/ampi__Allocation__c/fields/ampi__IATI_Tied_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Tied_Status__c</fullName>
    <description>Picklist to specify Tied Status as based on IATI code list (http://reference.iatistandard.org/203/codelists/TiedStatus/). The code list sits in the API Name/value of the picklist value, while the Label is the human-readable name of the Tied Status. The selected value is printed into the transaction/tied-status/@code attribute in the IATI Activity XML.</description>
    <label>IATI Tied Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__IATI_Tied_Status</valueSetName>
    </valueSet>
</CustomField>