force-app/main/default/objects/ampi__Allocation__c/fields/ampi__xx_Fund__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the fund from which an allocation is applied or committed.</description>
    <label>Fund</label>
    <referenceTo>ampi__xx_Fund__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>