force-app/main/default/objects/ampi__Allocation__c/fields/ampi__xx_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Status__c</fullName>
    <description>This field denotes the status of an Allocation. The values this field can have are applied for Committed and Rejected. The value of this field will determine which field on the related ampi__xx_Fund__c record will be updated with the ampi__Amount__c of the ampi__Allocation__c record.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied For</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>