force-app/main/default/objects/ampi__Allocation__c/validationRules/ampi__Organization_Role_Not_In_Current_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__Organization_Role_Not_In_Current_Project</fullName>
    <active>true</active>
    <description>Validation rule to ensure that selected Organization Role looks up to same the Project that the current Allocation looks up to</description>
    <errorConditionFormula>AND(AND(
(ampi__IATI_Organization_Role__r.ampi__IATI_Providing_Project__c   &lt;&gt;ampi__Project__c),NOT(ISBLANK(ampi__IATI_Organization_Role__c))
),
AND(
( ampi__IATI_Organization_Role__r.ampi__Project__c    &lt;&gt;ampi__Project__c),NOT(ISBLANK(ampi__IATI_Organization_Role__c))
))</errorConditionFormula>
    <errorDisplayField>ampi__IATI_Organization_Role__c</errorDisplayField>
    <errorMessage>Invalid Organization Role Selected: the selected organization role should relate to same project as the current allocation.</errorMessage>
</ValidationRule>